# EcoDietCalc

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  SPEC.md  STATUS.md  calculations.py  config.default.yml  config.py  constants.py  food_state.json  food_state_manager.py  main.py  planner.py  tuner_best.json
.github/workflows/: release.yml
EcoDietMaker/: calculations.py  food_state_manager.py  log.txt  main.py  planner.py
EcoDietMaker/interface/: persistence.py  prompts.py
EcoDietMaker/logs/: log.txt  logging_utils.py
EcoDietMaker/models/: food.py
EcoDietMaker/tests/: conftest.py
EcoDietMaker/tune/: tuner.py
docs/: FORMULAS.md  TEST_PROTOCOL.md
interface/: __init__.py  cli.py  persistence.py  prompts.py  render.py
logs/: __init__.py  logging_utils.py
mod/: .gitignore
mod/EcoDietMod/: DietCommands.cs  EcoDietMod.csproj  GameStateExporter.cs
models/: __init__.py  food.py  plan.py
scripts/: release-upload.sh
src/: cli.rs  error.rs  lib.rs  main.rs
src/interface/: mod.rs  prompts.rs  render.rs
src/models/: food.rs  mod.rs  plan.rs
src/planner/: calculations.rs  constants.rs  mod.rs  ranking.rs
src/state/: manager.rs  mod.rs  persistence.rs
src/tuner/: evaluation.rs  knobs.rs  mod.rs  (+2 more)
tests/: calculations_test.rs  conftest.py  selection_smoke_test.rs  test_calculations.py  test_cli.py  test_cmd_predict.py  test_config.py  test_food_state_manager.py  test_import.py  test_integration.py  test_persistence.py  test_planner.py  test_prompts.py  test_render.py  test_selection_smoke.py
tune/: tuner.py  tuner_results.csv
(+29 files in other folders)
